bg(gitIgnore):correct endpoint [Fixes #167333059]
